added extra fields to dto